--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         
         <footer class="text-center py-8 mt-12 border-t border-gray-200">
             <p class="text-gray-500">Created from the ML-Roadmap-for-2022 repository.</p>
-            <a href="https://thirumalesh.xyz" target="_blank" class="text-gray-500">Profile @thirumalesh</a>
+            <!-- <a href="https://thirumalesh.xyz" target="_blank" class="text-gray-500">@thirumalesh</a> -->
         </footer>
 
     </div>
